# metaVendedor

./: AppNewTable.py  README.md  app.py  pyproject.toml
arq/: Anotações.docx  teste.xlsx
